--- a/src/Manassa/Windows/MsMsGrid.xaml
+++ b/src/Manassa/Windows/MsMsGrid.xaml
@@ -49,17 +49,16 @@
 
             <DataGrid.Columns >  
                 <!--Dataset Information-->
-                <DataGridTextColumn         Header="ID"                 CanUserSort="True"     Binding="{Binding Feature.ID}"                           IsReadOnly="True"/>
-                <DataGridTextColumn         Header="Dataset ID"         CanUserSort="True"     Binding="{Binding Feature.GroupID}"                      IsReadOnly="True"/>
-                <DataGridTextColumn         Header="Precursor m/z"      CanUserSort="True"     Binding="{Binding Spectra.PrecursorMZ}"                  IsReadOnly="True"/>
-                <DataGridTextColumn         Header="Feature m/z"        CanUserSort="True"     Binding="{Binding Feature.Mz}"                           IsReadOnly="True"/>
-                <DataGridTextColumn         Header="MS/MS Scan"         CanUserSort="True"     Binding="{Binding Spectra.Scan}"                         IsReadOnly="True"/>
-                <DataGridTextColumn         Header="MS Scan"            CanUserSort="True"     Binding="{Binding Feature.Scan}"                         IsReadOnly="True"/>
-                <DataGridTextColumn         Header="Monoisotopic Mass"  CanUserSort="True"     Binding="{Binding Feature.MassMonoisotopicAligned}"      IsReadOnly="True"/>
-                <DataGridTextColumn         Header="Charge"             CanUserSort="True"     Binding="{Binding Feature.ChargeState}"                  IsReadOnly="True"/>
-                <DataGridTextColumn         Header="LC-MS Cluster ID"   CanUserSort="True"     Binding="{Binding ClusterId}"                            IsReadOnly="True"/>
-                <DataGridTextColumn         Header="Matched AMT"        CanUserSort="True"     Binding="{Binding MassTag.Sequence}"              IsReadOnly="True"/>
-                <DataGridTextColumn         Header="Database Result"    CanUserSort="True"     Binding="{Binding Peptide.PeptideSequence}"              IsReadOnly="True"/>
+                <DataGridTextColumn         Header="ID"                 CanUserSort="True"     Binding="{Binding FeatureID}"                           IsReadOnly="True"/>
+                <DataGridTextColumn         Header="Dataset ID"         CanUserSort="True"     Binding="{Binding FeatureGroupID}"                      IsReadOnly="True"/>
+                <DataGridTextColumn         Header="Precursor m/z"      CanUserSort="True"     Binding="{Binding PrecursorMZ}"                  IsReadOnly="True"/>
+                <DataGridTextColumn         Header="Feature m/z"        CanUserSort="True"     Binding="{Binding Mz}"                           IsReadOnly="True"/>
+                <DataGridTextColumn         Header="MS/MS Scan"         CanUserSort="True"     Binding="{Binding MsMsScan}"                         IsReadOnly="True"/>
+                <DataGridTextColumn         Header="MS Scan"            CanUserSort="True"     Binding="{Binding FeatureScan}"                         IsReadOnly="True"/>
+                <DataGridTextColumn         Header="Monoisotopic Mass"  CanUserSort="True"     Binding="{Binding MassMonoisotopicAligned}"      IsReadOnly="True"/>
+                <DataGridTextColumn         Header="Charge"             CanUserSort="True"     Binding="{Binding ChargeState}"                  IsReadOnly="True"/>                
+                <DataGridTextColumn         Header="Matched AMT"        CanUserSort="True"     Binding="{Binding Sequence}"                     IsReadOnly="True"/>
+                <DataGridTextColumn         Header="Database Result"    CanUserSort="True"     Binding="{Binding PeptideSequence}"              IsReadOnly="True"/>
             </DataGrid.Columns>
         </DataGrid>
     </StackPanel>
