--- a/src/Manassa/Windows/MainWindow.xaml
+++ b/src/Manassa/Windows/MainWindow.xaml
@@ -40,9 +40,10 @@
                         LargeImageSource="{StaticResource ResourceKey=MenuIcon}"
                         >                    
                         <ribbon:RibbonApplicationMenuItem Header="_New"  
-                                                          IsEnabled="False"        
+                                                          IsEnabled="True"        
                                                           ImageSource="{StaticResource ResourceKey=NewIcon}"
-                                                          x:Name="NewAnalysisMenuButton">                        
+                                                          x:Name="NewAnalysisMenuButton"
+                                                          Click="NewAnalysisMenuButton_Click">                        
                         </ribbon:RibbonApplicationMenuItem>
                         <ribbon:RibbonSeparator/>
                         <ribbon:RibbonApplicationMenuItem Header="_Open"                                                      
@@ -65,7 +66,7 @@
                     <ribbon:RibbonGroup x:Name="GeneralAnalysisGroup"                                     
                                         Header="General">
                         <ribbon:RibbonButton x:Name="NewAnalysisButton"
-                                             IsEnabled="False"
+                                             IsEnabled="True"
                                              LargeImageSource="{StaticResource ResourceKey=NewIcon}"
                                              Label="New" />
                         <ribbon:RibbonButton x:Name="LoadOptionsButton"
@@ -190,7 +191,7 @@
                     <Separator></Separator>
                 </StatusBarItem>
                 <StatusBarItem Grid.Column="1">
-                    <ProgressBar Value="30" Width="80" Height="18"/>
+                    <ProgressBar Value="0" Width="80" Height="18" IsEnabled="False"/>
                 </StatusBarItem>
             </StatusBar>
         </Grid>        
