--- a/src/Manassa/Windows/PerformAnalysisWindow.xaml
+++ b/src/Manassa/Windows/PerformAnalysisWindow.xaml
@@ -1,33 +1,80 @@
 ﻿<Window x:Class="Manassa.Windows.PerformAnalysisWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Perform Analysis" Height="480" Width="600">
+        xmlns:maConverters="clr-namespace:Manassa.Converters"
+        xmlns:ui="clr-namespace:Manassa.Windows"
+        Title="MultiAlign Analysis Setup" Height="583" Width="911">
+    <Window.Resources>
+        <maConverters:DatasetCountConverter     x:Key="DatasetCountConverter" />
+        <maConverters:DatasetSelectedConverter  x:Key="DatasetSelectedConverter" />
+    </Window.Resources>
+    
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
             <RowDefinition/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition/>            
+            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
-        <TabControl
+
+        <ui:DatasetSelection
             Grid.Row="0"
-            >
-            <TabItem Header="Datasets"/>
+            Grid.Column="0"
+            Grid.ColumnSpan="5"
+            Grid.RowSpan="3"
+            />             
+                                        
+        <Button
+            x:Name="ShowAnalysisOptionsWindow"
+            Grid.Row="3"
+            Grid.Column="0"
+            Height="32"
+            Width="128"
+            Margin="5,5,5,5"
+            Content="Set Analysis Options"
+            HorizontalAlignment="Left"
+            Click="Button_Click"
+            />
                 
-        </TabControl>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
-        </Grid>
+        <Button
+            x:Name="LoadFromPreviousButton"
+            Grid.Row="3"
+            Grid.Column="1"
+            Height="32"
+            Width="128"
+            Margin="5,5,5,5"
+            IsEnabled="False"
+            HorizontalAlignment="Left"
+            Content="Load From Previous"  
+            Click="LoadFromPreviousButton_Click"
+            />
+        <Button
+            x:Name="CancelButton"
+            Grid.Row="3"
+            Grid.Column="3"
+            Height="32"
+            Width="128"
+            Margin="5,5,5,5"
+            Content="Cancel"
+            Click="CancelButton_Click"  
+            />
+        <Button
+            x:Name="StartButton"
+            Grid.Row="3"
+            Grid.Column="4"
+            Height="32"
+            Width="128"
+            Margin="5,5,5,5"
+            Content="Start"
+            IsEnabled="{Binding DatasetCount, Converter={StaticResource ResourceKey=DatasetSelectedConverter}}"    
+            Click="StartButton_Click"
+            />        
     </Grid>
 </Window>
